@@ -1,0 +1,5 @@
+package org.openforis.collect.android;
+
+public enum NodeEvent {
+    CREATED, UPDATED, DELETED
+}
