@@ -1,8 +1,7 @@
 package org.openforis.collect.android;
 
-import org.openforis.collect.android.viewmodel.UiAttribute;
-import org.openforis.collect.android.viewmodel.UiNodeChange;
 import org.openforis.collect.android.viewmodel.UiNode;
+import org.openforis.collect.android.viewmodel.UiNodeChange;
 
 import java.util.Map;
 
@@ -10,7 +9,8 @@ import java.util.Map;
  * @author Daniel Wiell
  */
 public interface SurveyListener {
+
     void onNodeSelected(UiNode previous, UiNode selected);
 
-    void onNodeChanged(UiNode node, Map<UiNode, UiNodeChange> nodeChanges);
+    void onNodeChanged(NodeEvent event, UiNode node, Map<UiNode, UiNodeChange> nodeChanges);
 }
